<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrationActivity"
    android:background="@color/splashBg"
    android:orientation="vertical">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/dpImg"
        android:layout_gravity="center"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:padding="0dp"
        app:strokeWidth="2dp"
        app:strokeColor="@android:color/darker_gray"
        app:shapeAppearanceOverlay="@style/circleImageView"
        android:src="@drawable/man"
        android:layout_margin="2dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/upload_image"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:layout_gravity="center"/>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/view"
        android:layout_margin="-10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="36dp"
        app:cardCornerRadius="12dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/enter_your_details"/>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    android:maxLength="25"
                    android:drawablePadding="12dp"
                    android:drawableStart="@drawable/dp_img"
                    android:inputType="textCapSentences|textAutoCorrect|textPersonName|textAutoComplete"
                    android:imeOptions="actionNext"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/carNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/car_number"
                    android:maxLength="10"
                    android:inputType="textCapCharacters|textAutoCorrect|textAutoComplete"
                    android:drawablePadding="12dp"
                    android:drawableStart="@drawable/opt_num"
                    android:imeOptions="actionNext"/>
            </com.google.android.material.textfield.TextInputLayout>


<!--here is the xml code for from to city-->
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/cityA"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/cityFrom"
                    android:inputType="textPostalAddress"
                    android:maxLength="15"
                    android:drawablePadding="12dp"
                    android:drawableStart="@drawable/baseline_add_location_alt_24"
                    android:imeOptions="actionNext"/>


            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ProgressBar
                    android:id="@+id/progress_bar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:visibility="gone"/>

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/cityB"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/cityTO"
                    android:inputType="textPostalAddress"
                    android:maxLength="15"
                    android:drawablePadding="12dp"
                    android:drawableStart="@drawable/baseline_add_location_alt_24"
                    android:imeOptions="actionDone"/>

            </com.google.android.material.textfield.TextInputLayout>


            <Button
                android:id="@+id/userData"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginTop="16dp"
                android:layout_gravity="center"
                android:text="@string/save"/>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>


</LinearLayout>